<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:fitsSystemWindows="true"
    android:background="#00000000">

    <RelativeLayout
        android:id="@+id/parent_1"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/persegi_shape"
        android:paddingLeft="8dp">

        <TextView
            android:id="@+id/pesanan_text"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/dalam_perjalanan"/>

        <TextView
            android:id="@+id/perjalanan_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/pesanan_text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/sampai"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bayar_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/perjalanan_text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:text="@string/bayar"
            android:fontFamily="@font/poppinssemibold"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/approval"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/parent_1"
        android:background="@drawable/item_shape"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:elevation="100px">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/location_icon"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppinsextra"
            android:text="@string/alamat_text"/>

    </RelativeLayout>

</RelativeLayout>